# rack

./: .gitignore  Cargo.toml  LICENSE  README.md  main.porth  out  out.asm
.github/workflows/: main.yml
crates/test_macros/: Cargo.toml
crates/test_macros/src/: lib.rs
editor/: rack.vim
examples/: digits.rk  fib.rk  hello.rk  streq.rk
rack-parse-2/: Cargo.toml  lex.rs  test.rk
rack-parse-2/src/: lex.rs  main.rs  parse.rs
src/: codegen.rs  lex.rs  lib.rs  main.rs  out  out-opt.asm  out.asm  parse.rs
src/parse/: mod.rs
tests/: README.md  and.porth  divmod.rk  drop.porth  drop.rk  dup.porth  dup.rk  early_ret.rk  entry.rk  error.porth  gt.porth  gt.rk  hello_nes.porth  hello_nes.rk  hex.rk  if.porth  if.rk  integration.rs  let.rk  let_string.rk  loop.porth  lt.porth  lt.rk  neq.porth  nes_if.porth  nes_message.porth  nested_let.porth  not.rk  or.rk  out  out.asm  peek.rk  push_add.porth  puts.rk  strings.rk  swap.porth  swap.rk  write.rs
tests/crates/test_utils/src/: lib.rs
tests/expected/: basicfn.out  divmod.out  drop.out  dup.out  early_ret.out  error.out  gt.out  hex.out  if.out  let.out  let_string.out  loop.out  neq.out  nested_let.out  not.out  or.out  parse.out  peek.out  push_add.out  puts.out  readbyte.out  strings.out  swap.out  temp.out
tests/src/: and.rk  basicfn.rk  divmod.rk  error.rk  hex.rk  if.rk  loop.rk  neq.rk  nes_while.rk  nested_let.rk  parse.rk  readbyte.rk  strings.rk  temp.rk
