[package]
name = "rackc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"]}
thiserror = "1.0.40"

[dev-dependencies]
text-diff = "0.4.0"

[[test]]
name = "integration"
harness = false
