[package]
name = "rackc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3", features = ["derive"] }
thiserror = "1.0.40"

[dev-dependencies]
test_macros = { path = "tests/crates/test_macros" }
test_utils = { path = "tests/crates/test_utils" }

[workspace]
members = ["tests/crates/test_utils", "tests/crates/test_macros"]

[[test]]
name = "write"
harness = false
